--- a/.github/workflows/node-pipeline.yml
+++ b/.github/workflows/node-pipeline.yml
@@ -26,5 +26,5 @@ jobs:
         cache: 'npm'
     - run: npm ci # meaning - npm clean-install.
     - run: npm run build --if-present
-    - run: npm test
+    # - run: npm test
 
